--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,29 @@
+annotated-types==0.7.0
+anyio==4.9.0
+bcrypt==4.3.0
+cffi==1.17.1
+click==8.2.0
+cryptography==44.0.3
+dnspython==2.7.0
+ecdsa==0.19.1
+email-validator==2.1.0.post1
 fastapi==0.109.2
-uvicorn==0.27.1
+h11==0.16.0
+idna==3.10
 motor==3.3.2
+passlib==1.7.4
+pyasn1==0.6.1
+pycparser==2.22
 pydantic==2.6.1
 pydantic-settings==2.1.0
+pydantic_core==2.16.2
+pymongo==4.5.0
 python-dotenv==1.0.1
+python-jose==3.3.0
 python-multipart==0.0.9
-python-jose[cryptography]==3.3.0
-passlib[bcrypt]==1.7.4
-email-validator==2.1.0.post1 
+rsa==4.9.1
+six==1.17.0
+sniffio==1.3.1
+starlette==0.36.3
+typing_extensions==4.13.2
+uvicorn==0.27.1
